<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:id="@+id/background" android:orientation="vertical">
    <ScrollView android:id="@+id/scrollView1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <LinearLayout android:layout_height="match_parent" android:orientation="vertical" android:id="@+id/songList" android:layout_width="match_parent">
            <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/Songs" android:text="@string/songs"></Button>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/artist" android:id="@+id/Artists"></Button>
            <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/album" android:id="@+id/Albums"></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
