<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:id="@+id/backgroundnowplaying" android:orientation="vertical" android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:id="@+id/artistName" android:text="TextView" android:layout_height="wrap_content" android:layout_gravity="center" android:keepScreenOn="true" android:textSize="20px"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/songName" android:text="TextView" android:layout_height="wrap_content" android:textStyle="bold" android:layout_gravity="center|top" android:textSize="25px"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/albumName" android:text="TextView" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="20px"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1" android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_gravity="center" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/currentPosition"></TextView>
            <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/currentTime" android:layout_weight="1" android:clickable="true"></SeekBar>
            <TextView android:layout_width="wrap_content" android:layout_gravity="center" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/songDuration"></TextView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
            <Button android:layout_width="wrap_content" android:id="@+id/previousSong" android:layout_height="wrap_content" android:text="@string/previous"></Button>
            <Button android:layout_width="wrap_content" android:id="@+id/pauseButton" android:layout_height="wrap_content" android:text="@string/pause"></Button>
            <Button android:layout_width="wrap_content" android:id="@+id/nextSong" android:layout_height="wrap_content" android:text="@string/next"></Button>
            <Button android:layout_width="wrap_content" android:id="@+id/listAllSongs" android:layout_height="wrap_content" android:text="@string/list"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
